Remove some bad words ("assess", "investigates")

--- a/01-introduction.Rmd
+++ b/01-introduction.Rmd
@@ -80,8 +80,7 @@ knitr::include_graphics("figures/introduction/gbd.png")
 
 The data used were gathered in national household surveys or routinely collected from healthcare facilities providing HIV services.
 An important feature of these data are the location and time at which observations were recorded.
-Spatio-temporal data of this sort occur across a diverse range of application settings.
-Distinctive recurring commonalities make their collective study worthwhile.
+Spatio-temporal data have important recurring commonalities which occur across a diverse range of application settings.
 The work conducted in this thesis uses, and aspires to contribute to, techniques from spatio-temporal statistics.
 
 Computation is an essential part of modern statistical practice.
