--- a/04-beyond-borders.Rmd
+++ b/04-beyond-borders.Rmd
@@ -21,9 +21,9 @@ resource_version <- "20231211-152529-d4eac900"
 \markboth{Models for spatial structure}{}
 <!-- For PDF output, include these two LaTeX commands after unnumbered chapter headings, otherwise the mini table of contents and the running header will show the previous chapter -->
 
-This chapter investigates spatial random effect model specifications for areal data.
+This chapter is about spatial random effect model specifications for areal data.
 A simple model based on the adjacency structure between areas is popular in HIV small-area estimation and beyond.
-The analysis aimed to determine if this model is adequate, or a more complex model is necessary.
+The analysis aimed to determine if using a more complex model would result in more accurate predictions.
 
 Modelling spatial correlation is particularly important for the small-area estimation of HIV.
 This is because the covariates which are most strongly associated with HIV, such as sexual behaviour and STI status [@mayala2020predicting], are themselves difficult to measure.
@@ -434,7 +434,7 @@ The probabilities $\rho_i \in [0, 1]$ were linked to linear predictors $\eta_i \
 Spatial random effects were generated according to three different models (Table \@ref(tab:simulation-models)).
 Sample sizes were fixed as $m_i = 25$ for all $i \in [n]$, the intercept parameter as $\beta_0 = -2$ and the spatial random effect precision parameter as $\tau_u = 1$.
 
-(ref:geometries) Seven geometries were considered in the synthetic data study. These were the four geometries from Figure \@ref(fig:maup1) shown in Panel A, B, C and D, and three more realistic geometries shown in Panel E, F and G.
+(ref:geometries) Seven geometries were considered in the simulation study. These were the four geometries from Figure \@ref(fig:maup1) shown in Panel A, B, C and D, and three more realistic geometries shown in Panel E, F and G.
 
 ```{r geometries, fig.cap="(ref:geometries)"}
 knitr::include_graphics("figures/beyond-borders/geometries.png")
@@ -515,7 +515,7 @@ Let the parameter $\phi$ have posterior marginal $f(\phi) = p(\phi \, | \, \math
 Let $\phi_s$ be samples $s \in [S]$ from $f$.
 Let $\omega$ be the true value of $\phi$ used in the simulation.
 
-Latent field parameter and hyperparameter marginals from each model were assessed using three methods.
+The accuracy of latent field parameter and hyperparameter posterior marginals from each model were assessed using three methods.
 These were the mean squared error (MSE), the continuous ranked probability score [CRPS; @matheson1976scoring], and the calibration.
 
 The MSE is a simple and popular measure given by
