--- a/06-naomi-aghq.Rmd
+++ b/06-naomi-aghq.Rmd
@@ -1313,7 +1313,7 @@ knitr::include_graphics("figures/naomi-aghq/pca-demo.png")
 knitr::include_graphics(paste0("resources/naomi-aghq/", resource_version, "/depends/figB.png"))
 ```
 
-This section presents a case study of approximate Bayesian inference methods applied to the Naomi model in Malawi.
+This section presents a case-study of approximate Bayesian inference methods applied to the Naomi model in Malawi.
 Data from Malawi has previously been used to demonstrate the Naomi model, including as a part of the `naomi` R package vignette available from [`https://github.com/mrc-ide/naomi`](https://github.com/mrc-ide/naomi).
 Malawi was chosen for the vignette and this case-study in part because it has a small number of districts, $n = 30$, limiting the computational demand of the model.
 
@@ -1430,7 +1430,7 @@ Inferences from Naomi can be used to identify treatment gaps by calculating the 
 #### Finding strata with high incidence
 
 Some HIV interventions are cost-effective only within high HIV incidence settings, typically defined as higher than 1% incidence per year.
-Inferences from Naomi can be used to assess the probability of a strata having high incidence by evaluating $\mathbb{P}(\lambda_i > 0.01)$.
+Inferences from Naomi can be used to calculate the probability of a strata having high incidence by evaluating $\mathbb{P}(\lambda_i > 0.01)$.
 
 ## Discussion
 
@@ -1540,7 +1540,7 @@ The challenge of connecting this theory to nested use of any quadrature rule, li
 
 #### Exploration of the accuracy of INLA for complex models
 
-The universal INLA implementation can be used to assess the accuracy of INLA for a wider range of models than were previously possible.
+The universal INLA implementation can be used to measure the accuracy of INLA for a wider range of models than were previously possible.
 An important benefit of using `TMB` is that comparisons to NUTS can easily be made using exactly the same model template.
 Among the ELGM-type structures of particular interest for spatial epidemiology are aggregated likelihood models and evidence synthesis models.
 
