Improvements to HIV chapter, and add abbreviations and notations to HTML version

--- a/02-hiv-aids.Rmd
+++ b/02-hiv-aids.Rmd
@@ -54,7 +54,8 @@ As a result, AIDS is characterised by increased risk of developing opportunistic
 The first AIDS cases were reported in Los Angeles in the early 1980s [@gottlieb1981pneumocystis; @barre1983isolation].
 Since then, HIV has spread globally.
 Transmission occurs by exposure to specific bodily fluids of an infected person.
-The most common mode of transmission is via unprotected anal or vaginal sex, though transmission can also occur from a mother to her baby, or when drug injection equipment is shared.
+The most common mode of transmission is via unprotected anal or vaginal sex.
+Transmission can also occur from a mother to her baby, or when drug injection equipment is shared.
 Approximately `r custom_numbers_to_words(infections)` people have become infected with HIV, and of those `r custom_numbers_to_words(deaths)` have died of AIDS-related causes [@unaids2023aidsinfo].
 
 ```{r}
@@ -65,9 +66,9 @@ global_fund <- round((24.2 + 5)) * 1e9
 
 <!-- A lot of effort going into it -->
 An ongoing global effort has been made to respond to the epidemic.
-The response has been multifaceted, and shaped by local communities, civil society organisations, national governments, research institutions, pharmaceutical companies, international agencies like the Joint United Nations Programme
+The response has been multifaceted, shaped by local communities, civil society organisations, national governments, research institutions, pharmaceutical companies, international agencies like the Joint United Nations Programme
 on HIV/AIDS (UNAIDS), and global health initiatives such like the President's Emergency Plan for AIDS Relief (PEPFAR) and the Global Fund to Fight AIDS, Tuberculosis, and Malaria (the Global Fund).
-As an indication as to the scale of the response, the investment of $`r custom_numbers_to_words(pepfar)` by PEPFAR constitutes the "largest commitment by a single nation to address a single disease in history" [@pepfar2022].
+The investment of $`r custom_numbers_to_words(pepfar)` by PEPFAR constitutes the "largest commitment by a single nation to address a single disease in history" [@pepfar2022], indicating the scale of the response.
 
 ```{r}
 #' From https://www.unaids.org/en/resources/presscentre/featurestories/2021/september/20210906_global-roll-out-hiv-treatment
@@ -76,15 +77,15 @@ condom_infections_averted <- 117 * 1e6
 vmmc_infections_averted <- 340 * 1e3
 ```
 
-(ref:overall-picture) Globally, yearly new HIV infections peaked in 1995, and have since decreased by 59% and yearly AIDS-related deaths peaked in 2004, and have since decreased by 68% [@unaids2023aidsinfo]. Much of the disease burden is concentrated in eastern and southern Africa, as well as western and central Africa. The unit "M" refers to millions. The colour palette used in this figure, and throughout the thesis, is that of @okabe2008color. It is colourblind friendly, and the default in @wilke2019fundamentals.
+(ref:overall-picture) Globally, yearly new HIV infections peaked in 1995, and have since decreased by 59%. Yearly AIDS-related deaths peaked in 2004, and have since decreased by 68% [@unaids2023aidsinfo]. Much of the global disease burden is concentrated in eastern and southern Africa, as well as western and central Africa. The unit "M" refers to millions. The colour palette used in this figure, and throughout the theiss, is that of @okabe2008color. It is designed to be colourblind friendly, and the default in @wilke2019fundamentals.
 
 ```{r overall-picture, fig.cap="(ref:overall-picture)"}
 knitr::include_graphics("figures/hiv-aids/overall-picture.png")
 ```
 
 <!-- The effort has translated into progress -->
-Implementation of HIV prevention and treatment has significantly reduced the number of new HIV infections and AIDS-related deaths per year since their peak (Figure \@ref(fig:overall-picture)).
-The most significant evidence-based interventions, in chronological order of their introduction, are described below:
+Implementation of HIV prevention and treatment has significantly reduced the number of new HIV infections and AIDS-related deaths per year since their respective peaks (Figure \@ref(fig:overall-picture)).
+The most significant evidence-based interventions, in approximately chronological order of their introduction, are described below:
 
 * Condoms are an inexpensive and effective method for prevention of HIV and other sexually transmitted infections (STIs) such as *Chlamydia trachomatis*, *Neisseria gonorrhoeae*, syphilis, and *Trichomonas vaginalis*.
 Condom usage has increased significantly since 1990, which is estimated to have averted `r custom_numbers_to_words(condom_infections_averted)` new HIV infections [@stover2021impact].
@@ -98,17 +99,17 @@ The number of AIDS-related deaths, `r custom_numbers_to_words(art_deaths_averted
   ART reduces the amount of virus in the blood and genital secretions.
   If the virus is undetectable then there is significant evidence that it cannot be transmitted sexually [@cohen2011prevention; @broyles2023risk].
   For this reason, in addition to providing life saving treatment, ART also operates as prevention.
-  Approaches to lowering risk of HIV transmission using treatment are referred to as treatment as prevention (TaSP).
+  Approaches to lowering risk of HIV transmission this way are referred to as treatment as prevention (TaSP).
   Particular efforts have been made to provide pregnant women with ART to reduce the chance of mother-to-child transmission (MTCT) [@siegfried2011antiretrovirals].
 
 * Voluntary medical male circumcision (VMMC) partially protects against female-to-male HIV acquisition.
 Three landmark randomised control trials (RCTs) [@auvert2005randomized; @gray2007male; @bailey2007male] found complete surgical removal of the foreskin to result a reduction of HIV acquisition in men by 50-60%.
-Based on this evidence, VMMC has been recommended since 2007 by the World Health Organization (WHO) and UNAIDS as a key HIV intervention in high-prevalence settings.
-Scale up of VMMC across 15 priority countries between 2008 and 2019 is estimated to have already averted `r custom_numbers_to_words(vmmc_infections_averted)` new HIV infections, though the future number of new HIV infections averted is likely to be much higher.
+Based on this evidence, VMMC has been recommended since 2007 by the World Health Organization (WHO) and UNAIDS as a key HIV intervention in high-prevalence settings [@world2007new].
+Scale up of VMMC across 15 priority countries between 2008 and 2019 is estimated to have already averted `r custom_numbers_to_words(vmmc_infections_averted)` new HIV infections, though the future number of new HIV infections averted is likely to be much higher [@mcgillen2018emerging; @unaids2021vmmc].
 
 * Pre-exposure prophylaxis (PrEP) and post-exposure prophylaxis (PEP) are antiretroviral drugs which can be taken before and after exposure to prevent transmission.
 PrEP has been shown to be effective at an individual-level across a number of RCTs [@baeten2012antiretroviral; @thigpen2012antiretroviral], but there are few population-level studies.
-PEP cannot be studied with RCTs, but observational studies indicate that it is highly effective [@dominguez2016updated].
+Though PEP cannot be studied with RCTs, observational studies indicate it is highly effective [@dominguez2016updated].
 These medical interventions are more costly than some other options, so are primarily useful in high risk settings.
 
 Though important progress had been made, facilitated by the interventions above, there remains much more to do.
@@ -158,34 +159,37 @@ These include geographic and demographic prioritisation [@meyer2018targeting], k
 
 <!-- What is surveillance and how can it be used to meet these needs -->
 HIV surveillance refers to the collection, analysis, interpretation and dissemination of data relating to HIV [@pisani2003hiv].
-Surveillance can used to track epidemic indicators, identify at-risk populations, find drivers of transmission, and evaluate the impact of prevention and treatment programs.
-Important indicators include:
+Surveillance can be used to track epidemic indicators, identify at-risk populations, uncover drivers of transmission, implement prevention and treatment programs, and assess their impact.
+Important indicators to measure include:
 
 * **HIV prevalence** is the proportion $\rho \in [0, 1]$ of a population who have HIV.
 The number of PLHIV is given by $N\rho$, where $N$ is the (living) population size.
-Increases in HIV prevalence, or the number of PLHIV, can be caused either by new HIV infections or more PLHIV remaining alive by taking treatment.
-For this reason caution must be taken in directly interpreting changes in HIV prevalence.
-As a primary measure of population disease burden, HIV prevalence is used to calculate all of the other indicators given below.
+Increases in HIV prevalence, and the number of PLHIV, can be caused either by new HIV infections or more PLHIV remaining alive by taking treatment.
+For this reason it is important to take caution in directly interpreting changes in HIV prevalence.
+Nonetheless, as a primary measure of population disease burden, HIV prevalence is crucial in calculating all of the other indicators given below.
 
-* **HIV incidence** is the rate $\lambda > 0$ of new HIV infections, often written as number of new infections per 1000 person years.
-The number of new HIV infections that occur during a given time is the integral of HIV incidence multiplied by the size of the susceptible population.
+* **HIV incidence** is the rate $\lambda > 0$ of new HIV infections.
+In writing, HIV incidence is often given as a number of new infections per 1000 person years.
+The number of new HIV infections that occur during a given time is the integral of the rate of HIV incidence multiplied by the size of the susceptible population.
 Let $\rho_t$ be the HIV prevalence, and $N_t$ be the population size, at time $t$.
-Then the number of new HIV infections which occur in a given period of time are given by
+Then the number of new HIV infections which occur during a given period of time are given by
 $$
 I = \int \lambda_t \cdot (1 - \rho_t) \cdot N_t \text{d}t.
 $$
 Planning, delivery, and evaluation of prevention programming relies on estimates of HIV incidence and the number of new HIV infections.
+Knowing whether the rate of new infections is rising or declining within specific populations is crucial.
 
 * **ART coverage** is the proportion $\alpha \in [0, 1]$ of PLHIV who are on ART.
-Estimates of ART coverage play a direct role in planning provision of treatment services, and finding unmet treatment need.
 The number of people taking ART is given by $N \cdot \rho \cdot \alpha$.
+Estimates of ART coverage play a direct role in planning provision of treatment services, and finding unmet treatment need.
 
 * **Recent infection** is the proportion $\kappa \in [0, 1]$ of PLHIV who have been recently infected.
-Recency assays have been developed to distinguish between recent and longstanding infection based on biomarkers.
-Recent infection is primarily used to help estimate HIV incidence [@kassanjee2012new; @unaids2022using].
+Recency assays use biomarkers to distinguish between recent and longstanding infection, with varying sensitivity and specificity.
+Estimates of recent infection are primarily used to help estimate HIV incidence [@kassanjee2012new; @unaids2022using].
 
 * **Awareness of status** is the proportion $\xi \in [0, 1]$ of PLHIV who have been diagnosed with HIV.
-Programming of HIV testing and diagnosis is informed by awareness of status.
+Programming of HIV testing and diagnosis is informed by estimates of awareness of HIV status.
+HIV diagnosis allows for linkage to care and progression along the HIV treatment cascade and care continuum [@cdc2014].
 
 ### Data {#hiv-data}
 
