--- a/front-and-back-matter/_welcome-ebook.Rmd
+++ b/front-and-back-matter/_welcome-ebook.Rmd
@@ -11,3 +11,101 @@ If you notice typos or other issues, feel free to open an [issue](https://github
 
 ```{r acknowledgments, child=here::here('front-and-back-matter/_acknowledgements.Rmd')}
 ```
+
+## Abbreviations {-}
+
+| Abbreviation | Definition                                       |
+|:--------|:-------------------------------------------------|
+| HIV     | Human Immunodeficiency Virus                     |
+| DALY    | Disability Adjusted Life Year                    |
+| AIDS    | Acquired ImmunoDeficiency Syndrome               |
+| UNAIDS  | The Joint United Nations Programme on HIV/AIDS   |
+| PEPFAR  | President’s Emergency Plan for AIDS Relief       |
+| Global Fund | Global Fund to Fight AIDS, Tuberculosis, and Malaria |
+| DHS     | Demographic and Health Surveys                   |
+| AIS     | AIDS Indicator Survey                            |
+| PrEP    | Pre-Exposure Prophylaxis                         |
+| PEP     | Post-Exposure Prophylaxis                        |
+| FSW     | Female Sex Worker(s)                             |
+| MSM     | Men who have Sex with Men                        |
+| PWID    | People Who Inject Drugs                          |
+| TGP     | Transgender People                               |
+| ANC     | Antenatal Clinic                                 |
+| CDC     | Centers for Disease Control and Prevention       |
+| UAT     | Unlinked Anonymous Testing                       |
+| PMTCT   | Prevention of Mother-to-Child Transmission       |
+| PLHIV   | People Living with HIV                           |
+| TaSP    | Treatment as Prevention                          |
+| STI     | Sexually Transmitted Infection                   |
+| ART     | Antiretroviral Therapy                           |
+| VMMC    | Voluntary Medical Male Circumcision              |
+| PHIA    | Population-based HIV Impact Assessment           |
+| SSA     | Sub-Saharan Africa                               |
+| MCMC    | Markov Chain Monte Carlo                         |
+| NUTS    | No-U-Turn Sampler                                |
+| VI      | Variational Inference                             |
+| INLA    | Integrated Nested Laplace Approximation           |
+| GP      | Gaussian Process                                 |
+| CAR     | Conditionally Auto-regressive                    |
+| ICAR    | Intrisic Conditionally Auto-regressive           |
+| SAE     | Small-Area Estimation                            |
+| GMRF    | Gaussian Markov Random Field                     |
+| HMC     | Hamiltonian Monte Carlo                          |
+| LM      | Linear Model                                     |
+| GLM     | Generalised Linear Model                         |
+| GLMM    | Generalised Linear Mixed effects Model           |
+| LGM     | Latent Gaussian Model                            |
+| ELGM    | Extended Latent Gaussian Model                   |
+| BF      | Bayes Factor                                     |
+| CPO     | Conditional Predictive Ordinate                  |
+| DIC     | Deviance Information Criterion                   |
+| BIC     | Bayesian Information Criterion                   |
+| WAIC    | Watanabe-Akaike Information Criterion            |
+| SR      | Scoring Rule                                     |
+| SPSR    | Strictly Proper Scoring Rule                     |
+| CRPS    | Continuous Ranked Probability Score              |
+| LS      | Log Score                                        |
+| PIT     | Probability Integral Transform                   |
+| ECDF    | Empirical Cumulative Difference Function         |
+| ESS     | Effective Sample Size                            |
+| IID     | Independent and Identically Distributed          |
+| PPL     | Probabilistic Programming Language               |
+| CCD     | Central Composite Design                         |
+| EB      | Empirical Bayes                                  |
+| AGHQ    | Adaptive Gauss-Hermite Quadrature                |
+
+## Notations {-}
+
+| Notation     | Definition                                             |
+|:-------------|:-------------------------------------------------------|
+| $\propto$    | Proportional to.                                       |
+| $\mathbb{R}$ | The set of real numbers.                               |
+| $\mathbb{Z}$ | The set of integers.                                   |
+| $\mathbb{Z}^+$ | The set of positive integers.                        |
+| $\rho$       | HIV prevalence.                                        |
+| $\lambda$    | HIV incidence.                                         |
+| $\alpha$     | ART coverage.                                          |
+| $\mathcal{S}$ | Spatial study region $\mathcal{S} \subseteq \mathbb{R}^2$. |
+| $s \in \mathcal{S}$ | Point location.                                 |
+| $\mathcal{T}$ | Temporal study period $\mathcal{T} \subseteq \mathbb{R}$. |
+| $t \in \mathcal{T}$ | Time.                                           |
+| $\mathbf{y}$ | Data, a $n$-vector $(y_1, \ldots, y_n)$.               |
+| $\boldsymbol{\phi}$ | Parameters, a $d$-vector $(\phi_1, \ldots, \phi_d)$. |
+| $\mathbf{x}$ | Latent field, a $N$-vector $(x_1, \ldots, x_N)$.       |
+| $\boldsymbol{\theta}$ | Hyperparameters, a $m$-vector $(\theta_1, \ldots, \theta_m)$. |
+| $x \sim p(x)$ | $x$ has the probability distribution $p(x)$.          |
+| $A_i$        | Areal unit.                                            |
+| $A_i \sim A_j$ | Adjacency between areal units.                       |
+| $\mathbf{u}$ | Random effects, often spatial.                         |
+| $\mathbf{H}$ | Hessian matrix.                                        |
+| $\mathbf{R}$ | Structure matrix.                                      |
+| $\mathbf{Q}$ | Precision matrix.                                      |
+| $\boldsymbol{\mathbf{\Sigma}}$ | Covariance matrix.                   |
+| $\mathbf{M}^{-}$ | The generalised inverse of a (potentially rank-deficient) matrix $\mathbf{M}$. |
+| $\mathcal{N}$ | Gaussian distribution.                                |
+| $k: \mathcal{X} \times \mathcal{X} \to \mathbb{R}$ | Kernel function on the space $\mathcal{X}$. |
+| $A_i \sim A_j$ | Adjacency between areal units.                       |
+| $\mathcal{Q}$ | A set of quadrature nodes.                            |
+| $\omega: \mathcal{Q} \to \mathbb{R}$ | A quadrature weighting function. |
+| $\mathcal{Q}(m, k)$ | Gauss-Hermite quadrature points in $m$ dimensions with $k$ nodes per dimension, constructed according to a product rule. |
+| $\varphi$    | A standard (multivariate) Gaussian density.            |
