--- a/references.bib
+++ b/references.bib
@@ -2867,3 +2867,37 @@
   month = {April 18, 2016, Update (May 23, 2018)},
   url = {https://stacks.cdc.gov/view/cdc/38856}
 }
+
+@article{world2007new,
+  title={New data on male circumcision and HIV prevention: policy and programme implications},
+  author={{WHO and UNAIDS}},
+  journal={Geneva: World Health Organization},
+  year={2007}
+}
+
+@article{mcgillen2018emerging,
+  title={The emerging health impact of voluntary medical male circumcision in Zimbabwe: an evaluation using three epidemiological models},
+  author={McGillen, Jessica B and Stover, John and Klein, Daniel J and Xaba, Sinokuthemba and Ncube, Getrude and Mhangara, Mutsa and Chipendo, Geraldine N and Taramusi, Isaac and Beacroft, Leo and Hallett, Timothy B and others},
+  journal={PloS one},
+  volume={13},
+  number={7},
+  pages={e0199453},
+  year={2018},
+  publisher={Public Library of Science San Francisco, CA USA}
+}
+
+@misc{unaids2021vmmc,
+  title = {Voluntary Medical Male Circumcision Progress Brief},
+  author = {{UNAIDS and WHO}},
+  year = {2021},
+  howpublished = {UNAIDS},
+  url = {https://hivpreventioncoalition.unaids.org/wp-content/uploads/2021/04/JC3022_VMMC_4-pager_En_v3.pdf}
+}
+
+@misc{cdc2014,
+  title = {Understanding the {HIV} Care Continuum},
+  author = {{CDC}},
+  year = {2014},
+  howpublished = {CDC},
+  url = {http://www.cdc.gov/hiv/pdf/dhap_continuum.pdf}
+}
