--- a/92-appendixC.Rmd
+++ b/92-appendixC.Rmd
@@ -25,7 +25,7 @@ resource_version <- "20231206-143556-d6fbac86"
 
 #### `tmbstan` {#tmbstan-epil}
 
-(ref:tmbstan-epil) Traceplots for the `tmbstan` parameters with the worst effective sample size $\text{ESS}$ and potential scale reduction factor $\hat R$. These were `l_tau_nu` (an $\text{ESS}$ of 377) and `beta[3]` (an $\hat R$ of 1.006).
+(ref:tmbstan-epil) Traceplots for the `tmbstan` parameters with the lowest ESS and highest potential scale reduction factor. These were `l_tau_nu` (an $\text{ESS}$ of 377) and `beta[3]` (an $\hat R$ of 1.006).
 
 ```{r tmbstan-epil, fig.cap="(ref:tmbstan-epil)"}
 knitr::include_graphics("figures/naomi-aghq/tmbstan-epil.png")
@@ -33,7 +33,7 @@ knitr::include_graphics("figures/naomi-aghq/tmbstan-epil.png")
 
 #### `rstan` {#rstan-epil}
 
-(ref:stan-epil) Traceplots for the `rstan` parameters with the worst effective sample size $\text{ESS}$ and potential scale reduction factor $\hat R$. These were `tau_nu` (an $\text{ESS}$ of 437) and `tau_nu` (an $\hat R$ of 1.009). Rather than plotting the traceplot for `tau_nu` twice, the parameter `epsilon[18]` is included, which had the second highest $\hat R$ of 1.008.
+(ref:stan-epil) Traceplots for the `rstan` parameters with the lowest ESS and highest potential scale reduction factor. These were `tau_nu` (an $\text{ESS}$ of 437) and `tau_nu` (an $\hat R$ of 1.009). Rather than plotting the traceplot for `tau_nu` twice, the parameter `epsilon[18]` is included, which had the second highest $\hat R$ of 1.008.
 
 ```{r stan-epil, fig.cap="(ref:stan-epil)"}
 knitr::include_graphics("figures/naomi-aghq/stan-epil.png")
@@ -43,7 +43,7 @@ knitr::include_graphics("figures/naomi-aghq/stan-epil.png")
 
 ### NUTS convergence and suitability
 
-(ref:nuts-loa-loa) Traceplots for the parameters with the worst effective sample size $\text{ESS}$ and potential scale reduction factor $\hat R$.
+(ref:nuts-loa-loa) Traceplots for the parameters with the lowest ESS and highest potential scale reduction factor.
 
 ```{r nuts-loa-loa, fig.cap="(ref:nuts-loa-loa)"}
 knitr::include_graphics("figures/naomi-aghq/nuts-loa-loa.png")
@@ -298,7 +298,7 @@ Table: (\#tab:tmb-lookup) Correspondence between the variable name used in the N
 naomi_nuts <- readRDS(paste0("resources/naomi-aghq/", resource_version, "/depends/mcmc-out.rds"))
 ```
 
-(ref:rhat) The maximum potential scale reduction factor $\hat R$ was `r round(naomi_nuts$rhat_max, 3)`, below the value of 1.05 typically used as a cutoff for acceptable chain mixing. Additionally, the vast majority (`r round(100 * naomi_nuts$rhat_above_threshold, 1)`%) of $\hat R$ values were less than 1.1.
+(ref:rhat) The maximum potential scale reduction factor was `r round(naomi_nuts$rhat_max, 3)`, below the value of 1.05 typically used as a cutoff for acceptable chain mixing. Additionally, the vast majority (`r round(100 * naomi_nuts$rhat_above_threshold, 1)`%) of $\hat R$ values were less than 1.1.
 
 ```{r rhat, fig.cap="(ref:rhat)"}
 knitr::include_graphics(paste0("resources/naomi-aghq/", resource_version, "/depends/rhat.png"))
@@ -310,7 +310,7 @@ knitr::include_graphics(paste0("resources/naomi-aghq/", resource_version, "/depe
 knitr::include_graphics(paste0("resources/naomi-aghq/", resource_version, "/depends/ess.png"))
 ```
 
-(ref:worst-trace) Traceplots for the parameters with the worst effective sample size $\text{ESS}$ (Panel A) and potential scale reduction factor $\hat R$ (Panel B). These were `log_sigma_alpha_xs` (an $\text{ESS}$ of `r round(naomi_nuts$ess_min)`) and `ui_lambda_x[10]` (an $\hat R$ of `r round(naomi_nuts$rhat_max, 3)`). 
+(ref:worst-trace) Traceplots for the parameters with the lowest ESS (Panel A) and highest potential scale reduction factor (Panel B). These were `log_sigma_alpha_xs` (an $\text{ESS}$ of `r round(naomi_nuts$ess_min)`) and `ui_lambda_x[10]` (an $\hat R$ of `r round(naomi_nuts$rhat_max, 3)`). 
 
 ```{r worst-trace, fig.cap="(ref:worst-trace)"}
 knitr::include_graphics(paste0("resources/naomi-aghq/", resource_version, "/depends/worst-trace.png"))
