Improve HIV section and acknowledgements

--- a/02-hiv-aids.Rmd
+++ b/02-hiv-aids.Rmd
@@ -136,9 +136,10 @@ In others, the epidemic is sustained by heterosexual transmission, and national 
 These two epidemic settings are sometimes described as concentrated and generalised, respectively.
 Most of the countries severely affected by HIV are in sub-Saharan Africa (SSA).
 It is estimated that `r round(ssa_plhiv2022 / plhiv2022 * 100)`% of the `r custom_numbers_to_words(plhiv2022)` PLHIV worldwide live in SSA.
-Adult HIV prevalence (ages 15-49) is above than 10% (Figure \@ref(fig:naomi-continent)) in some countries in southern Africa, with some districts even exceeding 20%.
-Just as there is variation between countries, there is variation within countries.
-For example, adult HIV prevalence at the district municipality level in South Africa ranges from `r 6`% in Namakwa to `r 30`% in uMkhanyakude.
+Adult HIV prevalence (ages 15-49) is above 10% in some countries in southern Africa, with some districts even exceeding 20% (Figure \@ref(fig:naomi-continent)).
+Indeed, just as there is variation between countries, there is variation within countries.
+As an illustration, adult HIV prevalence at the district municipality level in South Africa ranges from `r 6`% in Namakwa to `r 30`% in uMkhanyakude.
+Accordingly, the work in this thesis is centred on measurement of HIV at the district level in SSA.
 
 <!-- Uneven burden across people -->
 In all countries and contexts, some groups of people are at much higher risk than others.
@@ -146,14 +147,14 @@ Groups of people at increased risk of HIV infection are known as key populations
 Examples include men who have sex with men (MSM), female sex workers (FSW), people who inject drugs (PWID), and transgender people (TGP) [@stevens2022key].
 KPs are often marginalised, and face legal and social barriers.
 Concentrated settings are defined by the majority of new HIV infections occurring in KPs and their sexual partners.
-In generalised settings like SSA, risk is more diffuse across the population.
-For example, in SSA adolescent girls and young women (AGYW) are a large demographic group at increased risk of HIV infection [@risher2021age; @monod2023longitudinal] but not typically considered a KP.
-That said, concentrated subepidemics often occur within nominally generalised settings [@tanser2014concentrated].
+In generalised settings like SSA, though concentrated subepidemics do occur [@tanser2014concentrated], risk is more diffuse across the population.
+In SSA adolescent girls and young women (AGYW) are a large demographic group at increased risk of HIV infection [@risher2021age; @monod2023longitudinal] but not typically considered a KP.
+Chapter \@ref(multi-agyw) focuses on measurement of HIV for AGYW and FSW.
 
 <!-- Practical methods for prevention prioritisation: what is being done and is it working -->
-Differentiated HIV treatment and prevention services [@godfrey2022hiv] can be practically implemented via a number of approaches.
+There are a number of ways to practically implement differentiated HIV treatment and prevention services [@godfrey2022hiv].
 These include geographic and demographic prioritisation [@meyer2018targeting], key population services [@world2022consolidated], and risk screening based on individual-level risk characteristics [@jia2022risk].
-<!-- Delivery of these services requires... -->
+Each approach requires strategic information about HIV disease burden.
 
 ## HIV surveillance {#surveillance}
 
@@ -193,7 +194,7 @@ HIV diagnosis allows for linkage to care and progression along the HIV treatment
 
 ### Data {#hiv-data}
 
-Data are used to estimate the above HIV indicators, in conjunction with scientific knowledge.
+Measurement of the above HIV indicators requires data.
 Multiple sources of data are used:
 
 * **Household surveys** are large, national cross-sectional studies.
