--- a/front-and-back-matter/_acknowledgements.Rmd
+++ b/front-and-back-matter/_acknowledgements.Rmd
@@ -1,17 +1,18 @@
-Thank you to my supervisors Seth Flaxman and Jeff Eaton for their guidance and mentorship.
+Thank you to my supervisors Seth Flaxman and Jeff Eaton for their guidance and mentorship throughout.
 <!-- Thanks to my examiners Adam Sykulski and Chris Paciorek. -->
-I am grateful for the research environment provided by the Modern Statistics and Statistical Machine Learning Centre for Doctoral Training at Imperial and Oxford and the Machine Learning and Global Health Network.
 Thanks to the HIV Inference Group at Imperial for tolerating a mathematician, and helping me learn to present my research.
+I am grateful to have been a part of the research environment provided by the Modern Statistics and Statistical Machine Learning Centre for Doctoral Training at Imperial and Oxford and the Machine Learning and Global Health Network.
 Thank you to Mike McLaren, Kevin Esvelt, the Nucleic Acid Observatory team, and the Sculpting Evolution lab for hosting my visit to the MIT Media Lab.
-Stand-up meetings and Google documents.
+I returned from Boston stand-up meeting and Google document in hand.
 <!-- Boston: Lenni, Lenny, Simon, Janika, Geetha, Frances, Leilani, Tammy. -->
-Thank you to Alex Stringer, and the Department of Statistics and Actuarial Science for hosting my visit to the University of Waterloo.
-Without Alex, Chapter \@ref(naomi-aghq) would never have gotten anywhere.
-Thanks to Håvard Rue and Finn Lindgren for helpful answers on the `R-INLA` discussion group.
+Thank you to Alex Stringer, and the Department of Statistics and Actuarial Science, for hosting my visit to the University of Waterloo.
+Without Alex, Chapter \@ref(naomi-aghq) wouldn't have gotten anywhere, and I'd still be waiting for MCMC to converge in Chapter \@ref(beyond-borders).
+Thanks to Tim Lucas and Patrick Brown for connecting us.
+Håvard Rue and Finn Lindgren gave helpful answers on the `R-INLA` discussion group.
 My sense for what matters has been shaped, and arguably improved, by the Effective Altruism community.
-Thank you to the Meridian, Trajan, and LEAH offices for hosting me.
-Thanks to Pınar for believing in me and my research at times when I didn't.
-Thank you to my housemates in Hackney: August, Dewi, Henry, Jerome, Johnny, and Tamara.
+Thank you to the Meridian, Trajan, and LEAH offices for hosting me this final year.
+Pınar believed in me and my research at times when I didn't.
+Thank you to my housemates August, Dewi, Henry, Jerome, Johnny, and Tamara: not to be all Bay area, but I'm proud of the intentional community we've built.
 No thanks to Simon Marshall, he didn't help, if anything he held me back.
 This research was made possible by funding provided by the Bill & Melinda Gates Foundation and EPSRC.
 <!-- Parents: Deborah, Karl. -->
