--- a/front-and-back-matter/_welcome-ebook.Rmd
+++ b/front-and-back-matter/_welcome-ebook.Rmd
@@ -1,11 +1,11 @@
 # Welcome {-}
 
 This is the e-book version of my PhD thesis, to be submitted to Imperial College London in accordance with the requirements of the degree of Doctor of Philosophy in Modern Statistics and Statistical Machine Learning.
-You can alternatively view the [PDF version](https://athowes.github.io/thesis/main.pdf).
+If you would prefer, you can view the [PDF version](https://athowes.github.io/thesis/main.pdf).
 The associated GitHub repository for this thesis is [`athowes/thesis`](https://github.com/athowes/thesis).
-For a concise introduction to the work, see my thesis defense [slides](https://athowes.github.io/thesis/slides.pdf).
-You can also look at the [corrections](https://athowes.github.io/thesis/correct.pdf) for this thesis.
-If you notice typos or other issues, feel free to open an [issue](https://github.com/athowes/thesis/issues) on GitHub, or submit a pull request.
+A concise introduction to the work is available via my thesis defense [slides](https://athowes.github.io/thesis/slides.pdf).
+The [corrections](https://athowes.github.io/thesis/correct.pdf) for this thesis are also available online.
+If you notice any typos or other issues with the work, feel free to open an [issue](https://github.com/athowes/thesis/issues) on GitHub, or submit a pull request.
 
 ## Acknowledgments {-}
 
